[package]
name = "cli"
version = "0.0.1"
authors = ["Tobias Raatiniemi <raatiniemi@gmail.com>"]
edition = "2021"

[dependencies]
log = { version = "0.4.22" }
env_logger = { version = "0.11.3" }
clap = { version = "4.5.9", features = ["derive"] }
json = "0.12.4"
regex = "1.10.5"

[dev-dependencies]
tempfile = "3.10.1"
