[package]
name = "cli"
version = "0.0.1"
authors = ["Tobias Raatiniemi <raatiniemi@gmail.com>"]
edition = "2021"

[dependencies]
log = { version = "0.4.25" }
env_logger = { version = "0.11.6" }
clap = { version = "4.5.28", features = ["derive"] }
json = "0.12.4"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.16.0"
